Add the wasm-app module's configuration information to the version catalog

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,10 @@
 # Plugin and library versions
 kotlin = "2.0.20"
 
+# wasm-app module's configuration information
+wasmApp-group = "com.sudarshanmhasrup.minimalist"
+wasmApp-version = "1.0.0"
+
 [libraries]
 
 [plugins]
