--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,12 +1,14 @@
 [versions]
 # Plugin and library versions
 kotlin = "2.0.20"
+composeMultiplatform = "1.9.0"
 
 # wasm-app module's configuration information
 wasmApp-group = "com.sudarshanmhasrup.minimalist"
 wasmApp-version = "1.0.0"
 
 [libraries]
+compose-multiplatform-ui = { module = "org.jetbrains.compose.ui:ui", version.ref = "composeMultiplatform" }
 
 [plugins]
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
