Add the "org.jetbrains.kotlin.plugin.compose" plugin to the version catalog

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,3 +14,4 @@ compose-multiplatform-runtime = { module = "org.jetbrains.compose.runtime:runtim
 [plugins]
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 compose-multiplatform = { id = "org.jetbrains.compose", version.ref = "composeMultiplatform" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
