--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,9 @@
 # Gradle
 org.gradle.console=verbose
 org.gradle.caching=true
+org.gradle.jvmargs=-Xmx3072M -Dfile.encoding=UTF-8
 
 # Kotlin
 kotlin.code.style=official
+kotlin.daemon.jvmargs=-Xmx3072M
 kotlin.incremental.wasm=true
