--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,10 @@ composeMultiplatform = "1.9.0"
 wasmApp-group = "com.sudarshanmhasrup.minimalist"
 wasmApp-version = "1.0.0"
 
+# jvm-app module's configuration information
+jvmApp-group = "com.sudarshanmhasrup.minimalist"
+jvmApp-version = "1.0.0"
+
 [libraries]
 compose-multiplatform-ui = { module = "org.jetbrains.compose.ui:ui", version.ref = "composeMultiplatform" }
 compose-multiplatform-runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "composeMultiplatform" }
